<resources>
    <string name="app_name">Detective Jones: Unsolved Cases</string>
    <string name="start">Start Game</string>
    <string name="english" translatable="false">ENGLISH</string>
    <string name="polski" translatable="false">POLSKI</string>
    <string name="done">Done</string>
    <string name="configure_character">Configure your character</string>
    <string name="woman">woman</string>
    <string name="man">man</string>
    <string name="name">Your name</string>
    <string name="q_what_school">What school did you attend?</string>
    <string name="q_name">What is your name?</string>
    <string name="choose_your_face">Choose your picture</string>
    <string name="harvard">I have studied law at Harvard</string>
    <string name="arkanas">I\'ve studied criminology at Arkanas State University</string>
    <string name="high_school">I finished high school and went to two years long road trip with friends</string>
    <string name="what_to_do">What do you want to do now</string>
    <string name="your_score">Your current score:</string>
    <string name="school1">Harvard</string>
    <string name="school2">Arkansas State University</string>
    <string name="school3">School of Life</string>
    <string name="welcome">Welcome to the game</string>
    <string name="welcome_txt">You will soon begin to work in the homicide department at one of the New York\'s police stations. Your mentor and teacher is notorious Detective Jones. His knowledge and experience will surely help you to take the first steps in this demanding profession, but do not let him down! He is definitely the person you should have on your side. </string>
    <string name="welcome_txt2">Your first case will be to solve the mystery of the death of a New York University student. Katy was very popular girl, she had good grades, and never got into trouble. And yet, yesterday she was found dead in a fountain in a university park... \nDo not disappoint Detective Jones and show what you are worth - solve this case as soon as possible!</string>
    <string name="ok" translatable="false">OK</string>
    <string name="back_twice">Please click BACK again to exit</string>
    <string name="soon">Soon!</string>
    <string name="murder_case_files_title">Murder case files</string>
    <string name="name_of_victim">Name of victim:</string>
    <string name="katy_flanagan" translatable="false">Katy Flanagan</string>
    <string name="victim_age">Victim age:</string>
    <string name="_21yo">21yo</string>
    <string name="unknown">Unknown</string>
    <string name="murder_weapon">Murder weapon:</string>
    <string name="motive_of_killing">Motive of killing:</string>
    <string name="couse_of_death">Couse of death:</string>
    <string name="victims_occupation">Victim\'s occupation:</string>
    <string name="student">student</string>
    <string name="main_menu">Main menu</string>
    <string name="murderer_name">Murderer name:</string>
    <string name="name_dialog">Name</string>
    <string name="text_dialog" translatable="false">This is a dialog box. Everthing the person says is here.</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="statue">Destroyed statue</string>
    <string name="notebook">Notebook</string>
    <string name="fingerprint_title">Fingerprint found on the statue head.</string>
    <string name="statue_title">This is a statue with head detached.</string>
    <string name="notebook_title">This is a Katy\'s notebook.</string>
    <string name="name_Jones">Detective Jones</string>
    <string name="door_description">Image of a door</string>
    <string name="tap">Tap the door to open it</string>
    <string name="j1">Ugh, did no one teach you to knock? What do you want?</string>
    <string name="p1">Good morning Detective Jones!Well, my name is %1$s and I am your new partner at work. They say you are the best so I hope to learn a lot from you.</string>
    <string name="j2">Of course I am the best! I just wonder why in return I need to work with kids from kindergarten! Did you at least study something?</string>
    <string name="p2">Well actually I just finished %1$s, so I believe I can be a valuable addition to you resources.</string>
    <string name="tap_the_screen_to_talk">Tap here to continue</string>
    <string name="no_proofs">You didn\'t find any proofs yet.</string>
    <string name="j3">Yeah, well we\'ll see about it. For now make yourself useful and search the murder scene. There may be some useful proofs waiting for us to be find. Oh, and don\'t forget to read the case files carefully!</string>
    <string name="p3">I\'m on it Detective Jones!</string>
    <string name="choose_scene">Choose the scene you want to search</string>
    <string name="park_title">Crime scene - the Park</string>
    <string name="park_description">This is where Katy has been found dead</string>
    <string name="room_title">Katy\'s room</string>
    <string name="room_description">This is the room in a dormitory, where Katy and her roommate lived</string>
    <string name="laboratory_title">The university - laboratory</string>
    <string name="laboratory_description">This is the laboratory at the New York University, where Katy has been spending a lot of time on her research.</string>
    <string name="no_suspects">You don\'t have any suspects yet!</string>
    <string name="new_evidence">You have found a new evidence! Check your evidence repository!</string>
    <string name="found_items">You have found %1$d/2 items here</string>
    <string name="books">Those are some old books. Nothing interesting really.</string>
    <string name="glasses">Those are just some cheap, plastic glasses.</string>
    <string name="body">Yes, this is where they found her...</string>
    <string name="clicked_twice">You have already found this item</string>
</resources>
