<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="pl.nataliana.detectivehardestcase.ChooseplayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scenes_tv"
            style="@style/TextLanguage"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/choose_scene" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/scene_1_title_tv"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="4dp"
            android:text="@string/park_title"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/scene_1_description_tv"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="4dp"
            android:text="@string/park_description"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary" />


        <TextView
            android:id="@+id/scene_2_title_tv"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="4dp"
            android:text="@string/room_title"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/scene_2_description_tv"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="4dp"
            android:text="@string/room_description"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/scene_3_title_tv"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="4dp"
            android:text="@string/laboratory_title"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/scene_3_description_tv"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="4dp"
            android:text="@string/laboratory_description"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/colorPrimary" />

    </LinearLayout>
</ScrollView>