<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="pl.nataliana.detectivehardestcase.ChooseplayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/case_file_title"
            style="@style/TextLanguage"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/murder_case_files_title" />

        <TextView
            android:id="@+id/victim_name_title"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/name_of_victim"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/victim_name"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/katy_flanagan"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/victim_age_title"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/victim_age"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/victim_age"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/_21yo"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/couse_death_title"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="Couse of death:"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/couse_death"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/unknown"
            android:textAllCaps="false"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/murder_weapon_title"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/murder_weapon"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/murder_weapon"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/unknown"
            android:textAllCaps="false"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/motive_title"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/motive_of_killing"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/motive"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/unknown"
            android:textAllCaps="false"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/murderer_name_title"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="Murderer name:"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/murderer_name"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="start|end"
            android:padding="2dp"
            android:text="@string/unknown"
            android:textAllCaps="false"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/back_to_story"
            style="@style/ButtonMain"
            android:layout_margin="16dp"
            android:onClick="backToStory"
            android:text="Main menu" />

    </LinearLayout>
</ScrollView>