<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/greyMain"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="pl.nataliana.detectivehardestcase.view.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/main_screen_icon" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/game_title" />

        <Button
            android:id="@+id/startQuiz"
            style="@style/ButtonMain"
            android:onClick="startGame"
            android:text="@string/start" />

        <LinearLayout
            android:id="@+id/language_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/english"
                style="@style/TextLanguage"
                android:text="@string/english" />

            <TextView
                android:id="@+id/polish"
                style="@style/TextLanguage"
                android:text="@string/polski" />

        </LinearLayout>
</LinearLayout>