<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="pl.nataliana.detectivehardestcase.ChooseplayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/configure_txt"
            style="@style/TextLanguage"
            android:text="@string/configure_character" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/woman_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="50dp"
                android:onClick="imageChoosen"
                android:src="@drawable/player_face_f" />

            <ImageView
                android:id="@+id/man_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:onClick="imageChoosen"
                android:src="@drawable/player_face_m" />

        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/user_configured"
            style="@style/ButtonMain"
            android:layout_marginTop="16dp"
            android:onClick="startStory"
            android:text="@string/done" />


    </LinearLayout>
</ScrollView>